<resources>
    <string name="app_name">Game Backlog</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="status">Status</string>
    <string name="date_added">Date added</string>
    <string name="notes">Notes</string>
    <string name="dialog_game_deletion_positive">Delete</string>
    <string name="dialog_game_modify_positive">Discard</string>
    <string name="game_has_been_modified_negative">Your changes have not been saved</string>
    <string name="dialog_game_deletion_negative">Cancel</string>
    <string name="game_deleted">game has been deleted</string>
    <string name="delete_game">Delete Game</string>
    <string name="title_is_required">Title is required!</string>
    <string name="platform_is_required">Platform is required!</string>
    <string name="title_field_is_empty">Title field is empty</string>
    <string name="platform_field_is_empty">Platform field is empty</string>
    <string name="game_has_been_added">Game has been added</string>
    <string name="game_has_been_modified">Game has been modified</string>
    <string name="title_screen_main">Game Backlog Manager</string>
    <string name="title_screen_add">Add Game</string>
    <string name="string_menu_delete_all">Delete All</string>
    <string name="action_database_clear">Database Cleared</string>
    <string name="dialog_game_deletion_single">Are you sure you want to delete this game?</string>
    <string name="dialog_game_deletion_all">Are you sure you want to delete all games?</string>
    <string name="dialog_game_discard">Are you sure you want to discard your changes?</string>
    <string name="swipe_delete">Game Deleted</string>
    <string name="menu_action_cancel">Cancel</string>

    <!--String that we are going to use for the Spinner-->
    <string-array name="game_status">
        <item>Want to play</item>
        <item>Playing</item>
        <item>Stalled</item>
        <item>Dropped</item>
    </string-array>

    <!--String that we are going to use for the Test Objects-->
    <string-array name="game_titles">
        <item>Battlefield 4</item>
        <item>Call of Duty</item>
        <item>Snake</item>
        <item>Overwatch</item>
        <item>Doom</item>
        <item>The Division</item>
        <item>Hitman 6</item>
        <item>Final Fantasy</item>
        <item>Uncharted</item>
        <item>Far Cry</item>
        <item>Street Fighter</item>
        <item>Sims 2</item>
        <item>Flappy Bird</item>
        <item>Worms</item>
        <item>Grand Theft Auto</item>
        <item>Mines</item>
        <item>Patience</item>
        <item>Chess</item>
        <item>Dead Island</item>
        <item>Total War</item>
        <item>Homefront</item>
        <item>Witcher</item>
        <item>Gran Turismo</item>
        <item>Ghost Recon</item>
        <item>Mario Kart</item>
        <item>Uncharted</item>
        <item>No Mans Sky</item>
    </string-array>
</resources>
